--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.7",
     "@types/react-router-dom": "^5.3.3",
     "ethers": "^6.15.0",
+    "ipfs-http-client": "^60.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
